--- a/chapter4.tex
+++ b/chapter4.tex
@@ -259,7 +259,7 @@ Show further that the three regions may be further classified into past, present
 We first prove 
 $$\mathbf\spatie y^2_1+y^2_2+y^2_3-y^2_4=0$$
 The null geodesic equations:
-\begin{align}
+\begin{align*}
 & \left\{ \begin{array}{l}
 \frac{\delta^2 x^r}{\delta u^2} = \dv[2]{x_r}{u} =0 \quad \text{ as we use homogeneous coordinates}\\\\
 a_{mn} \dv{x_m}{u}\dv{x_n}{u}=0\\
@@ -270,7 +270,7 @@ A_1^2+A_2^2+A_1^2+A_3^2-A_4^2=0\\
 \end{array} \right.\\
 \Rightarrow \spatie &\frac{\left((x_1)^2+(x_2)^2+(x_3)^2-(x_4)^2\right)}{u^2} = 0\quad \text{ for } u\neq 0\\
 \Rightarrow \spatie &(x_1)^2+(x_2)^2+(x_3)^2-(x_4)^2 = 0
-\end{align}
+\end{align*}
 $$\lozenge$$
 About the existence of three regions. First let's investigate the case in a $V_3$ space-time manifold in order to have a more intuitive grasp.\\
 Consider a family of events $(p_1,p_2,u)$ with $u\in\left(-\infty,\infty\right)$ (see the line $P^{'}P^{"}$ in figure 1.1.)
@@ -285,84 +285,110 @@ Region I where $u > u_0 = R$: the events $(p_1,p_2,u)$ will lie on the line abov
 Region II where $ u < -u_0 = -R$: the events $(p_1,p_2,u)$ will lie on the line below point $P^{"}$.\\
 Region III where $ -R= -u_0 < u < u_0 = R$: the events $(p_1,p_2,u)$ will lie on the segment $P^{'}P^{"}$.\\
 Let's generalize this now for a $V_4$ space-time manifold.\\
-Put $R^2 = (y_1)^2+(y_2)^2+(y_3)^2$ and consider $\phi(y_1,y_2,y_3,y_4)= (y_1)^2+(y_2)^2+(y_3)^2-(y_4)^2$ so $\phi(y_1,y_2,y_3,y_4)= R^2-(y_4)^2$.\\
+Put $R^2 = (y_1)^2+(y_2)^2+(y_3)^2$ and consider $\phi(y_1,y_2,y_3,y_4)= (y_1)^2+(y_2)^2+(y_3)^2-(y_4)^2$ so \begin{align}\phi(y_1,y_2,y_3,y_4)= R^2-(y_4)^2\end{align}
 For $\phi=0$ we lie on the light-cone.\\
 For $\phi>0 \quad\Rightarrow R^2 > y_4^2$ and so $-R<y_4<R$ defines one region (region III).\\
-For $\phi<0 \quad\Rightarrow R^2 < y_4^2$ and so   $y_4>R$ and $y_4<-R$ define two  regions (region I and II).\\$$\lozenge$$\\\\
+For $\phi<0 \quad\Rightarrow R^2 < y_4^2$ and so   $y_4>R$ and $y_4<-R$ define two  regions (region I and II).
+$$\lozenge$$
+
 \textbf{We now show statement $\mathit{a.}$ of the exercise.}\\
 Consider $2$ events $P_0,\ P_1$ with coordinates $(y_1^{(0)},y_2^{(0)},y_3^{(0)},y_4^{(0)})$ and $(y_1^{(1)},y_2^{(1)},y_3^{(1)},y_4^{(1)})$  and a curve defined by 
-\begin{align}y_i= \pm\sqrt{\left(\left(y_i^{(1)}\right)^2-\left(y_i^{(0)}\right)^2\right)u + \left(y_i^{(0)}\right)^2}\spatie u\in \left[0,1\right]
-\end{align}
+\begin{align*}
+y_i= \pm\sqrt{\left(\left(y_i^{(1)}\right)^2-\left(y_i^{(0)}\right)^2\right)u + \left(y_i^{(0)}\right)^2}\spatie u\in \left[0,1\right]
+\end{align*}
 where the $\pm$ is chosen so that $y_i(0) = y_i^{(0)}$ and $y_i(1) = y_i^{(1)}$ and that the sign only changes when $y_i(u)=0$ and $sign\left(y_i^{(0)}\right) \neq sign\left(y_i^{(1)}\right)$. Such curve will be continuous.
 Put
-\begin{align}
+\begin{align*}
 R^2&= \left(y_1\right)^2+\left(y_2\right)^2+\left(y_3\right)^2\\
 {R_{0}}^2&= \left(y^0_1\right)^2+\left(y^0_2\right)^2+\left(y^0_3\right)^2\\
 {R_{1}}^2&= \left(y^1_1\right)^2+\left(y^1_2\right)^2+\left(y^1_3\right)^2
-\end{align}
-For the points on the curve defined by  (5), $R^2$ can then be written as 
-\begin{align}
+\end{align*}
+For the points on the curve, $R^2$ can then be written as 
+\begin{align*}
 R^2&= \left(R_1^2-R_0^2\right)u+R_0^2
-\end{align}
-Be $\phi(u)= R^2-y_4^2$.\\
-\textbf{Case a1: $P_0, P_1$ both lie in region I or both in region II.} Then,\\
-\begin{align}
-\phi(u) & < 0\quad \forall \ u\in \left[0,1\right]\\
-\Rightarrow\quad R_0^2 < (y_4^{0})^2 \quad &\wedge \quad  R_1^2 < (y_4^{1})^2 \\ \text{ with }   (y_4^{0}>0 \  \wedge \ y_4^{1}>0)\text{ in Region I}\quad &\vee \quad (y_4^{0}<0\quad \wedge \quad y_4^{1}<0)  \text{ in Region II}
-\end{align}
+\end{align*}
+Then \begin{align}
+&\phi(u) = \left(R_1^2-R_0^2\right)u+R_0^2 - \left[\left(y_4^{(1)}\right)^2   -\left(y_4^{(0)}\right)^2 \right]u -\left(y_4^{(0)}\right)^2 \quad \text{(see (1))}
+\end{align}\\\\
+\textbf{Case a1: $P_0, P_1$ both lie in region I or both in region II.} Be $\phi_0\equiv \phi(0)$, $\phi_1\equiv \phi(1)$, the we have the following conditions:\\
+\begin{align*}
+\left\{\begin {matrix}
+\phi_0 < 0&\wedge &\phi_1  < 0\\\\
+R_0^2 < (y_4^{0})^2 &\wedge &  R_1^2 < (y_4^{1})^2 \\\\
+\text{ with } (y_4^{0}>0 \quad  \wedge \quad y_4^{1}>0)\text{ in Region I} &\vee & (y_4^{0}<0\quad \wedge \quad y_4^{1}<0)  \text{ in Region II}
+\end{matrix}\right.
+\end{align*}
 Then, $$\cancel{\exists } \  u \in \left[0,1\right]: \phi(u)=0$$
-Indeed,
+Indeed, as $\phi_0 < 0\wedge \phi_1  < 0$, from $(2)$ we have ,
 \begin{align}
-\phi(u) &= \left(R_1^2-R_0^2\right)u+R_0^2 + \left(\left(y_4^{(0)}\right)^2   -\left(y_4^{(0)}\right)^2 \right)u -\left(y_4^{(0)}\right)^2\\
-\phi(u)=0\spatie \Rightarrow u&= -\frac{R_0^2- \left(y_4^{(0)}\right)^2}{R_1^2-R_0^2  -\left(y_4^{(1)}\right)^2  +\left(y_4^{(0)}\right)^2}
+\phi(u)=0\quad\Rightarrow\spatie  &= -\frac{R_0^2- \left(y_4^{(0)}\right)^2}{R_1^2-R_0^2  -\left(y_4^{(1)}\right)^2  +\left(y_4^{(0)}\right)^2}
 \end{align}
-Let's simplify notationally the last equation. Put $R_0^2- \left(y_4^{(0)}\right)^2=-\tau $ and $R_1^2- \left(y_4^{(1)}\right)^2=-\sigma$ with both $\tau, \sigma > 0$. $(14)$ can be written as
-\begin{align}
+Let's simplify notationally the last equation. Put $R_0^2- \left(y_4^{(0)}\right)^2=-\tau $ and $R_1^2- \left(y_4^{(1)}\right)^2=-\sigma$ with both $\tau, \sigma > 0$. $(3)$ can be written as
+\begin{align*}
 u&=\frac{\tau}{\tau-\sigma}\\
  &=\frac{1}{1-\frac{\sigma}{\tau}}\\
-\Rightarrow\spatie \left|u\right| & > 1 \spatie \text{ as } \frac{\sigma}{\tau} >0
-\end{align}
+\Rightarrow\spatie &u \notin [0,1] \spatie \text{ as } \frac{\sigma}{\tau} >0
+\end{align*}
 Note, that in the case $\tau=\sigma$ we have $\phi(u)= \tau = \text{ constant}$ and can't reach $0$.
 So, there exist no $u\in\left[0,1\right]$ for which $\phi(u)=0$ and the curve does not intersect the null cone.\\\\
-\textbf{Case a2: $P_0, P_1$ both lie in region III.} Then,\\
-\begin{align}
-\phi(u) & > 0\quad \forall \ u\in \left[0,1\right]\\
-\Rightarrow\quad R_0^2 > (y_4^{0})^2 \quad &\wedge \quad  R_1^2 > (y_4^{1})^2 
-\end{align}
+\textbf{Case a2: $P_0, P_1$ both lie in region III.} Then,
+\begin{align*}
+\left\{\begin {matrix}
+\phi_0 > 0&\wedge &\phi_1  > 0\\\\
+R_0^2 > (y_4^{0})^2 &\wedge &  R_1^2> (y_4^{1})^2 \\
+\end{matrix}\right.
+\end{align*}
 Then, $$\cancel{\exists } \  u \in \left[0,1\right]: \phi(u)=0$$
 Indeed,
-Let's simplify  notationally the  equation (14) by now by puting $R_0^2- \left(y_4^{(0)}\right)^2=\tau $ and $R_1^2- \left(y_4^{(1)}\right)^2=\sigma$ with both $\tau, \sigma > 0$. $(14)$ can be written again as
-\begin{align}
+Let's simplify  notationally the  equation (3) by now by putting $R_0^2- \left(y_4^{(0)}\right)^2=\tau $ and $R_1^2- \left(y_4^{(1)}\right)^2=\sigma$ with both $\tau, \sigma > 0$. $(3)$ can be written again as
+\begin{align*}
 u& =\frac{1}{1-\frac{\sigma}{\tau}}
-\end{align}
+\end{align*}
 and follow the same reasoning as in case 1.
 So, there exist no $u\in\left[0,1\right]$ for which $\phi(u)=0$ and the curve does not intersect the null cone.\\\\
-\\$$\lozenge$$\\\\
+\\$$\lozenge$$
+\newpage
 \textbf{We now show statement $\mathit{b.}$ of the exercise.}\\\\
 
 \textbf{Case b1: $P_0$ lies in region I, $P_1$  lies in region II.} \\
-Those two regions are separated by the $3$-flat (plane) $y_4=0$. So it's suffice that $R^2=0$ for $\phi(u)$ being zero. Hence $y_i=0$, $  i=1,2,3$, and the cruve will cut the cone at it's apex.
+Those two regions are separated by the $3$-flat (plane) $y_4=0$. So it's suffice that $R^2=0$ for $\phi(u)$ being zero. Hence $y_i=0$, $  i=1,2,3$, and the curve will cut the cone at it's apex.
 \\\\
 \textbf{Case b2: $P_0$ lies in region I or II, $P_1$  lies in region III.} \\
 We have 
-\begin{align}
+\begin{align*}
 R_0^2 > (y_4^{0})^2\quad R_1^2 < (y_4^{1})^2
-\end{align}
+\end{align*}
 Put $R_0^2 - (y_4^{0})^2= \tau$ and $R_1^2 - (y_4^{1})^2 =-\sigma$ with $\tau,\sigma >0$. We get
-\begin{align}
+\begin{align*}
 \phi(u)&=0\\
 \Rightarrow \spatie u&=-\frac{\tau}{-\sigma-\tau}\\
 &= \frac{1}{1+\frac{\sigma}{\tau}}
-\end{align}
+\end{align*}
 So, there is a solution $u\in \left[0,1\right]$ for which $\phi(u)=0$ and the curve intersects the null cone.
-\\$$\lozenge$$\\\\
+\\$$\lozenge$$\\
+\newpage
 
 \textbf{We now investigate the straight segment questions.} \\
-Case 1: $A$ and $B$ both lie in the the present (region I) or in the past (region II)\\
+Case 1: $A$ and $B$ both lie in the present (region I) or in the past (region II)\\
 Consider $2$ events $P_0,\ P_1$ with coordinates $(y_1^{(0)},y_2^{(0)},y_3^{(0)},y_4^{(0)})$ and $(y_1^{(1)},y_2^{(1)},y_3^{(1)},y_4^{(1)})$  and a segment  defined by 
 \begin{align}y_i= \left(y_i^{(1)}-y_i^{(0)}\right)u + y_i^{(0)}\spatie u\in \left[0,1\right]
 \end{align}
-Be $\phi(u)= y_1^2+y_2^2+y_3^2-y_4^2$.\\
+Be $\phi(u)= y_1^2+y_2^2+y_3^2-y_4^2$ with $\phi_0\equiv \phi(0) < 0$ and $\phi_01\equiv \phi(1) < 0$.\\
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\begin{comment}
 Then,
  \begin{align}
 \phi(u) &= \left\{\begin{array}{l} \ \ \left[\left(y_1^{(1)}-y_1^{(0)}\right)u + y_1^{(0)}\right]^2\\
@@ -410,8 +436,8 @@ The function $\phi(u)$ is a parabola.
     \subfloat[]{\input{D:/MathLatex/images/fig_p126_Ex1_c4.tex}}
 \caption{Problematic null cone parametric functions.}
 \label{fig:fig_p126_1b}
-\end{figure}From the parabola's in figure $1.2.$ it is clear that the function can't reach $0$ in $u\in(0,1)$  and hence that the segment will not intersect the null cone.\\
-One problematic could occur as represented in figure $1.3$.
+\end{figure}From the parabola's in figure $4.2.$ it is clear that the function can't reach $0$ in $u\in(0,1)$  and hence that the segment will not intersect the null cone.\\
+One problematic could occur as represented in figure $4.3$.
 For such a parabola, we have :
 \begin{align}
 \left\{\begin{array}{l} \ \ 
@@ -462,6 +488,7 @@ D &= \left[2 \left(\kappa- \phi_0\right)\right]^2-4\left(\phi_1 +\phi_0-2\kappa\
 \end{align}
 Obviously, this path of proving leads to nothing as $D$ can be positive even for a segment lying entirely in zone $I$ or $II$. To see that, take two events, stationary in  the space  at the point $P\left(0,0,y_3^{(0)}\right)$. The negative term in (39) disappears and obviously $D>0$.\\
 $\dagger$WHAT IS THE ANALYTICAL WAY TO PROVE THIS? IS $a>0$ A CONDITION?$\dagger$
+\end{comment}
 \begin{comment}
 \begin{figure}[H]
 \input{D:/MathLatex/images/fig_p126_Ex1_b.tex}
